@@ -1,1 +1,3 @@
-2025-01-19 22:21 - Package created
+2025-01-19 22:21 UTC - Package created
+
+2025-01-20 01:10 UTC - Added polynomial derivative function. Enhanced README file.
